Constraintprog/minizinc-1.6/tests/flattening/test-abort8.err_exp
mzn2fzn:
  error: 
  test-abort8.mzn:5 
  In variable declaration for 'x'. 
  In coercion. 
  In 'abort' expression. 
  Abort: "This assignment aborts!"
